--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,12 +1,12 @@
-[SETTINGS]
-LABEL_SERVER="Configure LMS Service:"
-LABEL_START="Start"
-LABEL_STOP="Stop"
-LABEL_RESTART="Restart"
-LABEL_ENABLE="Enable at Boot"
-LABEL_DISABLE="Disable at Boot"
-LABEL_LMS="Logitech Media Server"
-LABEL_LMS_SETTINGS="LMS Settings"
-HINT_NOSETTINGS="This Plugin has no options. The complete configuration is done directly in the LMS WebUI."
-LABEL_BOOTSTATE="The LMS Service at boot time is:"
-LABEL_STATE="Current state of LMS service:"
+[COMMON]
+LABEL_PLUGINTITLE="MotionEye"
+LABEL_LOGFILES="Logfile"
+LABEL_ME_WEBUI="MotionEye WebUI"
+LABEL_MULTIVIEW="MultiView"
+LABEL_UNKNOWN="Unknown"
+HINT_UPDATING="Updating..."
+HINT_FAILED="Failed"
+HINT_RUNNING="Running"
+HINT_STOPPED="Stopped"
+HINT_EXECUTING="Executing..."
+HINT_NOOPTIONS="This Plugin has no settings nor options. Please visit the MotionEye WebUI for configuration."
